--- a/style.css
+++ b/style.css
@@ -57,6 +57,10 @@ a{
 .grow{
     flex-grow: 1;
 }
+
+.container{
+    padding: 0 20px;
+}
 /*-------------------------- 
     TYPOGRAPHY 
 --------------------------*/
@@ -65,6 +69,7 @@ body{
     font-size: 12px;
     font-weight: 600;
     background-color: #141923;
+    color: white;
 }
 
 .txt-grey{
@@ -83,6 +88,10 @@ h1{
     font-size: 12px;
 }
 
+.txt-center{
+    text-align: center;
+}
+
 /*-------------------------- 
     HEADER
 --------------------------*/
@@ -98,12 +107,12 @@ header .logo{
     width: 130px;
 }
 
-nav{
+header nav{
     padding: 30px 0;
     margin-left: -16px;
 }
 
-nav ul li:first-child{
+ header nav ul li:first-child{
     border-left: 2px solid lime;
     
 }
@@ -142,9 +151,66 @@ header button:last-child{
     MAIN
 --------------------------*/
 main{
+    width: 100%;
     height: calc(100vh - 90px);
+    display: block;
 }
 
+/* top main */
+.top-main{
+    background-color: rgba(0, 0, 0, 0.6);
+    width: 100%;
+    min-height: 90px;
+    justify-content: flex-end;
+    align-items: center;
+    position: sticky;
+    top: 0;
+    right: 0;
+    z-index: 10;
+}
+
+.top-main button{
+    border: solid white 1px;
+    border-radius: 40px;
+    padding: 10px 40px;
+    margin-right: 4px;
+}
+
+.top-main button:hover{
+    font-size: 16px;
+}
+
+/* bottom main */
+.bottom-main li{
+    margin-right: 20px;
+}
+
+.bottom-main li:first-child{
+    border-bottom: 1px solid lime ;
+}
+
+.bottom-main ul{
+    justify-content: center;
+}
+
+.bottom-main nav{
+    margin-top: 10px;
+    margin-bottom: 20px;
+}
+
+.bottom-main .flex.wrap{
+    margin-left: -10px;
+}
+
+.card{
+    width: calc(100% / 6);
+    padding: 20px 10px;
+}
+
+.bottom-main h3{
+    padding-top: 12px;
+    padding-bottom: 6px;
+}
 /*-------------------------- 
     FOOTER
 --------------------------*/
