--- a/style.css
+++ b/style.css
@@ -123,6 +123,10 @@ header .logo{
     width: 130px;
 }
 
+header .logo-mobile{
+    display: none;
+}
+
 header nav{
     padding: 30px 0;
     margin-left: -16px;
@@ -207,10 +211,6 @@ header button:last-child{
     margin-bottom: 20px;
 }
 
-.bottom-main .flex.wrap{
-    margin-left: -10px;
-}
-
 .card{
     width: calc(100% / 6);
     padding: 20px 10px;
@@ -269,17 +269,24 @@ footer .container{
     justify-content: space-between;
 }
 /* left */
+
+footer .left{
+    width: 25%;
+}
 footer .container .left{
     padding-top: 20px;
 }
 
 footer img{
+    max-width: 100%;
     width: 50px;
+    height: 50px;
+
 }
 
 footer .brano{
     padding: 10px;
-    padding-right: 30px;
+    padding-right: 20px;
 }
 
 footer .left button{
@@ -296,16 +303,25 @@ footer .left small:hover{
 }
 
 /* center */
+footer .center{
+    width: 50%;
+    max-width: 600px;
+}
+
+footer .center ul{
+    justify-content: center;
+}
+
 footer .player{
     padding-top: 16px;
 }
 footer .player li{
     font-size: 20px;
-    margin-right: 50px;
+    margin-right: 10%;
 }
 
 footer .player li:first-child{
-    margin-left: 50px;
+    margin-left: 10%;
 }
 
 footer .player li:nth-child(3){
@@ -326,6 +342,7 @@ footer ul{
 }
 
 .center .player > div{
+    justify-content: center;
     align-items: center;
 }
 
@@ -346,19 +363,15 @@ footer .center ul li:nth-child(3):hover i{
 }
 /* right */
 footer .right{
-    padding-top: 40px;
+    width: 25%;
+}
+
+footer .container .right{
+    align-items: center;
 }
 
 footer .right li{
-    margin-left: 20px;
-}
-
-footer .right li:last-child{
-    margin-left: 0;
-}
-
-footer .right li.flex{
-    align-items: center;
+    margin-left: 10px;
 }
 
 .bar .bar-inside .circle-bar{
@@ -371,8 +384,19 @@ footer .right li.flex{
     right: -5px;
     display: none;
 }
+
 .right .bar{
-    width: 80px;
+    width: 60%;
+}
+
+footer .settings{
+    width: 100%;
+    align-items: center;
+    margin-top: 30px;
+}
+
+footer li i, .bar{
+    cursor: pointer;
 }
 
 .bar:hover .circle-bar{
@@ -382,3 +406,91 @@ footer .right li.flex{
     RESPONSIVE
 --------------------------*/
 
+@media screen and (max-width: 1100px){
+    .card{
+        width: calc(100% / 4);
+    }
+}
+
+@media screen and (max-width: 700px){
+    .card{
+        width: calc(100% / 2);
+    }
+    
+    .left div:last-child{
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    footer .brano{
+        padding: 0 10px;
+    }
+}
+
+@media screen and (max-width: 600px){
+    header{
+        width: 50px;
+        padding: 10px;
+    }
+
+    header .logo,
+    header h1,
+    header button.txt-gray,
+    header div.overflow,
+    header button a.txt-white,
+    header small.txt-gray,
+    header nav li a{
+        display: none;
+    }
+
+    header .logo-mobile{
+        display: block;
+    }
+    
+    header nav ul li:first-child,
+    header button:last-child {
+        border: none;
+    }
+
+    header li.flex{
+        justify-content: center;
+    } 
+
+    header li img,
+    header nav,
+    header button img,
+    header button{
+        margin: 0;
+        padding: 0;
+    }
+
+    header li img{
+        margin: 4px 0;
+    }
+
+    header nav,
+    header button{
+        margin-top: 10px;
+    }   
+    
+    header button.flex{
+        justify-content: center;
+    }
+
+    header.flex{
+        position: relative;
+    }
+
+    header button.flex img.txt-gray{
+        position: absolute;
+        bottom: 40px;
+        left: 14px;
+    }
+
+    header button.flex:last-child{
+        position: absolute;
+        bottom: 8px;
+        left: 14px;
+    }
+    
+}
